# machine-learning-samples

essential-ml-algorithms/: .gitignore  02-logistic-regression.py  03-decision-trees-random-forest.py  04-xgboost.py  05-k-means-clustering.py  README.md  pyproject.toml  run_all_algos_ex.py
essential-ml-algorithms/src/pytorch/: 01-linear-regression.py  02-logistic-regression.py  03-decision-trees-random-forest.py  04-xgboost.py  05-k-means-clustering.py  06-support-vector-machine.py  07-neural-networks.py  run_all_algos_ex.py
essential-ml-algorithms/src/sklearn/: 01-linear-regression.py  06-support-vector-machine.py  07-neural-networks.py  run_all_algos_ex.py
mastering-probability-distributions/: README.md  execution_profiler.py  main.py  pyproject.toml
ml-tutorial-tf-py/: README.md  look_at_data.py  pyproject.toml  train_model_and_test.py
